[gd_scene load_steps=31 format=2]

[ext_resource path="res://game/hud/music_player.gd" type="Script" id=1]
[ext_resource path="res://assets/theme/theme_lerimama.tres" type="Theme" id=2]
[ext_resource path="res://game/hud/hud.gd" type="Script" id=5]
[ext_resource path="res://game/hud/hud_color_indicator.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/theme/font_big.tres" type="DynamicFont" id=7]
[ext_resource path="res://assets/atlas_hud.png" type="Texture" id=8]
[ext_resource path="res://game/hud/hud_life_icons.gd" type="Script" id=9]
[ext_resource path="res://game/gui/start_countdown.tscn" type="PackedScene" id=10]
[ext_resource path="res://game/hud/hud_game_timer_hunds.tscn" type="PackedScene" id=11]
[ext_resource path="res://game/gui/pregame_instructions.tscn" type="PackedScene" id=12]
[ext_resource path="res://game/hud/hud_energy_bar.gd" type="Script" id=13]

[sub_resource type="StyleBoxFlat" id=239]
bg_color = Color( 0, 0, 0, 0.784314 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.952941, 0.356863, 0.498039, 1 )

[sub_resource type="StyleBoxFlat" id=449]
bg_color = Color( 0, 0, 0, 0.784314 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.368627, 1, 0.662745, 1 )

[sub_resource type="AtlasTexture" id=147]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="StreamTexture" id=144]
load_path = "res://.import/atlas_hud.png-e7dc1fba151c6637ba4698f0439dac44.stex"

[sub_resource type="AtlasTexture" id=123]
atlas = SubResource( 144 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=122]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=125]
atlas = ExtResource( 8 )
region = Rect2( 18, 48, 10, 16 )
margin = Rect2( -1, 0, 0, 0 )

[sub_resource type="AtlasTexture" id=126]
atlas = ExtResource( 8 )
region = Rect2( 32, 64, 48, 16 )

[sub_resource type="AtlasTexture" id=132]
atlas = ExtResource( 8 )
region = Rect2( 32, 80, 48, 16 )

[sub_resource type="AtlasTexture" id=269]
atlas = ExtResource( 8 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=268]
atlas = ExtResource( 8 )
region = Rect2( 48, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=130]
atlas = ExtResource( 8 )
region = Rect2( 64, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=131]
atlas = ExtResource( 8 )
region = Rect2( 64, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=129]
atlas = ExtResource( 8 )
region = Rect2( 64, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=148]
atlas = ExtResource( 8 )
region = Rect2( 2, 84, 14, 12 )
margin = Rect2( 0, 3, 0, 0 )

[sub_resource type="AtlasTexture" id=146]
atlas = ExtResource( 8 )
region = Rect2( 18, 84, 14, 12 )
margin = Rect2( 0, 3, 0, 0 )

[sub_resource type="AtlasTexture" id=128]
atlas = ExtResource( 8 )
region = Rect2( 16, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=127]
atlas = ExtResource( 8 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=450]
atlas = ExtResource( 8 )
region = Rect2( 40, 80, 12, 14 )
margin = Rect2( 2, 0, 0, 0 )

[node name="Hud" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 1280, 720 )
theme = ExtResource( 2 )
script = ExtResource( 5 )

[node name="Popups" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="EnergyWarning" type="Control" parent="Popups"]
visible = false
anchor_right = 1.0
margin_top = 72.0
margin_bottom = 136.0
__meta__ = {
"_edit_group_": true
}

[node name="Solo" type="Control" parent="Popups/EnergyWarning"]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -288.0
margin_right = 288.0
margin_bottom = 64.0
__meta__ = {
"_edit_group_": true
}

[node name="Panel" type="Panel" parent="Popups/EnergyWarning/Solo"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 239 )

[node name="StepsRemaining" type="Label" parent="Popups/EnergyWarning/Solo"]
modulate = Color( 0.952941, 0.356863, 0.498039, 1 )
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 21.0
margin_top = -11.0
margin_right = -21.0
margin_bottom = 11.0
grow_horizontal = 2
size_flags_horizontal = 3
text = "NO ENERGY! Collect a color to revitalize."
align = 1

[node name="DuelP1" type="Control" parent="Popups/EnergyWarning"]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -598.0
margin_top = 11.0
margin_right = -43.0
margin_bottom = 53.0
__meta__ = {
"_edit_group_": true
}

[node name="Panel" type="Panel" parent="Popups/EnergyWarning/DuelP1"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 239 )

[node name="StepsRemaining" type="Label" parent="Popups/EnergyWarning/DuelP1"]
modulate = Color( 0.952941, 0.356863, 0.498039, 1 )
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 21.0
margin_top = -11.0
margin_right = -21.0
margin_bottom = 11.0
grow_horizontal = 2
size_flags_horizontal = 3
text = "NO ENERGY! Collect a color to revitalize."
align = 1

[node name="DuelP2" type="Control" parent="Popups/EnergyWarning"]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = 43.0
margin_top = 11.0
margin_right = 598.0
margin_bottom = 53.0
__meta__ = {
"_edit_group_": true
}

[node name="Panel" type="Panel" parent="Popups/EnergyWarning/DuelP2"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 239 )

[node name="StepsRemaining" type="Label" parent="Popups/EnergyWarning/DuelP2"]
modulate = Color( 0.952941, 0.356863, 0.498039, 1 )
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 21.0
margin_top = -11.0
margin_right = -21.0
margin_bottom = 11.0
grow_horizontal = 2
size_flags_horizontal = 3
text = "NO ENERGY! Collect a color to revitalize."
align = 1

[node name="Instructions" parent="Popups" instance=ExtResource( 12 )]
visible = false
__meta__ = {
"_edit_horizontal_guides_": [ 120.0, 160.0 ]
}

[node name="GameCountdown" parent="Popups" instance=ExtResource( 10 )]
visible = false

[node name="LevelUp" type="Control" parent="Popups"]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -232.0
margin_top = 320.0
margin_right = 232.0
margin_bottom = 384.0
__meta__ = {
"_edit_group_": true
}

[node name="Panel" type="Panel" parent="Popups/LevelUp"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 449 )

[node name="Label" type="Label" parent="Popups/LevelUp"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -202.0
margin_top = -27.0
margin_right = 202.0
margin_bottom = 27.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 7 )
text = "LEVEL 2"
align = 1

[node name="Life" type="Label" parent="."]
visible = false
margin_left = 32.0
margin_top = 69.0
margin_right = 114.0
margin_bottom = 91.0
text = "LIFE: 0"
valign = 2
__meta__ = {
"_editor_description_": ""
}

[node name="Energy" type="Label" parent="."]
visible = false
margin_left = 136.0
margin_top = 69.0
margin_right = 180.0
margin_bottom = 91.0
text = "E: 0"
valign = 2
__meta__ = {
"_editor_description_": ""
}

[node name="Header" type="Control" parent="."]
anchor_right = 1.0
margin_bottom = 40.0

[node name="HeaderUndi" type="ColorRect" parent="Header"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0784314, 0.0784314, 0.0784314, 1 )

[node name="TopLineL" type="HBoxContainer" parent="Header"]
margin_left = 32.0
margin_top = 7.0
margin_right = 462.0
margin_bottom = 29.0
custom_constants/separation = 16

[node name="PlayerLabel" type="Label" parent="Header/TopLineL"]
margin_right = 24.0
margin_bottom = 22.0
size_flags_vertical = 8
custom_colors/font_color = Color( 1, 1, 1, 0.470588 )
text = "P1"
valign = 1
uppercase = true
__meta__ = {
"_editor_description_": ""
}

[node name="LifeIcons" type="HBoxContainer" parent="Header/TopLineL"]
margin_left = 40.0
margin_top = 3.0
margin_right = 92.0
margin_bottom = 22.0
rect_min_size = Vector2( 0, 19 )
size_flags_vertical = 8
custom_constants/separation = 2
script = ExtResource( 9 )

[node name="LifeIcon" type="Control" parent="Header/TopLineL/LifeIcons"]
margin_top = 1.0
margin_right = 16.0
margin_bottom = 19.0
rect_min_size = Vector2( 16, 18 )
size_flags_vertical = 8

[node name="OffIcon" type="TextureRect" parent="Header/TopLineL/LifeIcons/LifeIcon"]
margin_right = 16.0
margin_bottom = 16.0
texture = SubResource( 147 )

[node name="OnIcon" type="TextureRect" parent="Header/TopLineL/LifeIcons/LifeIcon"]
margin_right = 16.0
margin_bottom = 16.0
texture = SubResource( 123 )

[node name="LifeIcon2" type="Control" parent="Header/TopLineL/LifeIcons"]
margin_left = 18.0
margin_top = 1.0
margin_right = 34.0
margin_bottom = 19.0
rect_min_size = Vector2( 16, 18 )
size_flags_vertical = 8

[node name="OffIcon" type="TextureRect" parent="Header/TopLineL/LifeIcons/LifeIcon2"]
margin_right = 16.0
margin_bottom = 16.0
texture = SubResource( 122 )

[node name="OnIcon" type="TextureRect" parent="Header/TopLineL/LifeIcons/LifeIcon2"]
margin_right = 16.0
margin_bottom = 16.0
texture = SubResource( 123 )

[node name="LifeIcon3" type="Control" parent="Header/TopLineL/LifeIcons"]
margin_left = 36.0
margin_top = 1.0
margin_right = 52.0
margin_bottom = 19.0
rect_min_size = Vector2( 16, 18 )
size_flags_vertical = 8

[node name="OffIcon" type="TextureRect" parent="Header/TopLineL/LifeIcons/LifeIcon3"]
margin_right = 16.0
margin_bottom = 16.0
texture = SubResource( 122 )

[node name="OnIcon" type="TextureRect" parent="Header/TopLineL/LifeIcons/LifeIcon3"]
margin_right = 16.0
margin_bottom = 16.0
texture = SubResource( 123 )

[node name="EnergyBar" type="HBoxContainer" parent="Header/TopLineL"]
margin_left = 108.0
margin_top = 3.0
margin_right = 172.0
margin_bottom = 22.0
rect_min_size = Vector2( 0, 19 )
size_flags_vertical = 8
custom_constants/separation = 6
script = ExtResource( 13 )

[node name="TextureRect7" type="TextureRect" parent="Header/TopLineL/EnergyBar"]
margin_top = 1.0
margin_right = 10.0
margin_bottom = 19.0
rect_min_size = Vector2( 0, 18 )
size_flags_vertical = 8
texture = SubResource( 125 )

[node name="TextureProgress" type="TextureProgress" parent="Header/TopLineL/EnergyBar"]
margin_left = 16.0
margin_top = 1.0
margin_right = 64.0
margin_bottom = 19.0
rect_min_size = Vector2( 0, 18 )
size_flags_vertical = 8
max_value = 192.0
step = 8.0
texture_over = SubResource( 126 )
texture_progress = SubResource( 132 )

[node name="ColorHolder" type="HBoxContainer" parent="Header/TopLineL"]
margin_left = 188.0
margin_right = 226.0
margin_bottom = 22.0
size_flags_vertical = 8
custom_constants/separation = 8

[node name="TextureRect5" type="TextureRect" parent="Header/TopLineL/ColorHolder"]
margin_top = 4.0
margin_right = 16.0
margin_bottom = 22.0
rect_min_size = Vector2( 16, 18 )
size_flags_vertical = 8
texture = SubResource( 269 )

[node name="Label" type="Label" parent="Header/TopLineL/ColorHolder"]
margin_left = 24.0
margin_right = 38.0
margin_bottom = 22.0
size_flags_vertical = 8
text = "0"
valign = 1
__meta__ = {
"_editor_description_": ""
}

[node name="StepsHolder" type="HBoxContainer" parent="Header/TopLineL"]
visible = false
margin_left = 272.0
margin_right = 310.0
margin_bottom = 22.0
size_flags_vertical = 8
custom_constants/separation = 8

[node name="TextureRect5" type="TextureRect" parent="Header/TopLineL/StepsHolder"]
margin_top = 4.0
margin_right = 16.0
margin_bottom = 22.0
rect_min_size = Vector2( 16, 18 )
size_flags_vertical = 8
texture = SubResource( 268 )

[node name="Label" type="Label" parent="Header/TopLineL/StepsHolder"]
margin_left = 24.0
margin_right = 38.0
margin_bottom = 22.0
size_flags_vertical = 8
text = "0"
valign = 1
__meta__ = {
"_editor_description_": ""
}

[node name="SkillHolder" type="HBoxContainer" parent="Header/TopLineL"]
visible = false
margin_left = 326.0
margin_right = 364.0
margin_bottom = 22.0
size_flags_vertical = 8
custom_constants/separation = 8

[node name="TextureRect5" type="TextureRect" parent="Header/TopLineL/SkillHolder"]
margin_top = 4.0
margin_right = 16.0
margin_bottom = 22.0
rect_min_size = Vector2( 16, 18 )
size_flags_vertical = 8
texture = SubResource( 130 )

[node name="Label" type="Label" parent="Header/TopLineL/SkillHolder"]
margin_left = 24.0
margin_right = 38.0
margin_bottom = 22.0
size_flags_vertical = 8
text = "0"
valign = 1
__meta__ = {
"_editor_description_": ""
}

[node name="BurstHolder" type="HBoxContainer" parent="Header/TopLineL"]
visible = false
margin_left = 242.0
margin_right = 280.0
margin_bottom = 22.0
size_flags_vertical = 8
custom_constants/separation = 8

[node name="TextureRect6" type="TextureRect" parent="Header/TopLineL/BurstHolder"]
margin_top = 4.0
margin_right = 16.0
margin_bottom = 22.0
rect_min_size = Vector2( 16, 18 )
size_flags_vertical = 8
texture = SubResource( 131 )

[node name="Label" type="Label" parent="Header/TopLineL/BurstHolder"]
margin_left = 24.0
margin_right = 38.0
margin_bottom = 22.0
size_flags_vertical = 8
text = "0"
valign = 1
__meta__ = {
"_editor_description_": ""
}

[node name="PointsHolder" type="HBoxContainer" parent="Header/TopLineL"]
margin_left = 242.0
margin_right = 334.0
margin_bottom = 22.0
rect_min_size = Vector2( 0, 22 )
size_flags_vertical = 8
custom_constants/separation = 8

[node name="TextureRect4" type="TextureRect" parent="Header/TopLineL/PointsHolder"]
visible = false
margin_top = 4.0
margin_right = 16.0
margin_bottom = 22.0
rect_min_size = Vector2( 16, 18 )
size_flags_vertical = 8
texture = SubResource( 129 )

[node name="Label" type="Label" parent="Header/TopLineL/PointsHolder"]
margin_right = 70.0
margin_bottom = 22.0
size_flags_vertical = 8
text = "SCORE"
valign = 1
__meta__ = {
"_editor_description_": ""
}

[node name="Points" type="Label" parent="Header/TopLineL/PointsHolder"]
margin_left = 78.0
margin_right = 92.0
margin_bottom = 22.0
size_flags_vertical = 8
text = "0"
valign = 1
__meta__ = {
"_editor_description_": ""
}

[node name="GameTimerHunds" parent="Header" instance=ExtResource( 11 )]
margin_left = 588.0
margin_top = -3.0
margin_right = 692.0
margin_bottom = 29.0

[node name="TopLineR" type="HBoxContainer" parent="Header"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -568.0
margin_top = 7.0
margin_right = -30.0
margin_bottom = 29.0
grow_horizontal = 0
alignment = 2

[node name="MusicPlayer" type="Label" parent="Header/TopLineR"]
margin_right = 46.0
margin_bottom = 22.0
rect_min_size = Vector2( 46, 0 )
text = "00"
align = 2
script = ExtResource( 1 )
__meta__ = {
"_editor_description_": ""
}

[node name="OnIcon" type="TextureRect" parent="Header/TopLineR/MusicPlayer"]
margin_top = 3.0
margin_right = 14.0
margin_bottom = 19.0
texture = SubResource( 148 )

[node name="OffIcon" type="TextureRect" parent="Header/TopLineR/MusicPlayer"]
margin_top = 3.0
margin_right = 14.0
margin_bottom = 19.0
texture = SubResource( 146 )

[node name="HighscoreLabel" type="Label" parent="Header/TopLineR"]
margin_left = 58.0
margin_right = 196.0
margin_bottom = 22.0
grow_horizontal = 0
size_flags_horizontal = 10
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "%HS 000000"
align = 2
__meta__ = {
"_editor_description_": ""
}

[node name="PlayerLineR" type="HBoxContainer" parent="Header/TopLineR"]
margin_left = 200.0
margin_right = 538.0
margin_bottom = 22.0
grow_horizontal = 0
size_flags_horizontal = 11
custom_constants/separation = 16
alignment = 2
__meta__ = {
"_edit_group_": true
}

[node name="PointsHolder" type="HBoxContainer" parent="Header/TopLineR/PlayerLineR"]
margin_right = 92.0
margin_bottom = 22.0
rect_min_size = Vector2( 0, 22 )
size_flags_vertical = 8
custom_constants/separation = 8

[node name="TextureRect4" type="TextureRect" parent="Header/TopLineR/PlayerLineR/PointsHolder"]
visible = false
margin_top = 4.0
margin_right = 16.0
margin_bottom = 22.0
rect_min_size = Vector2( 16, 18 )
size_flags_vertical = 8
texture = SubResource( 129 )

[node name="Label" type="Label" parent="Header/TopLineR/PlayerLineR/PointsHolder"]
margin_right = 70.0
margin_bottom = 22.0
size_flags_vertical = 8
text = "SCORE"
valign = 1
__meta__ = {
"_editor_description_": ""
}

[node name="Points" type="Label" parent="Header/TopLineR/PlayerLineR/PointsHolder"]
margin_left = 78.0
margin_right = 92.0
margin_bottom = 22.0
size_flags_vertical = 8
text = "0"
valign = 1
__meta__ = {
"_editor_description_": ""
}

[node name="ColorHolder" type="HBoxContainer" parent="Header/TopLineR/PlayerLineR"]
margin_left = 108.0
margin_right = 146.0
margin_bottom = 22.0
size_flags_vertical = 8
custom_constants/separation = 8

[node name="TextureRect5" type="TextureRect" parent="Header/TopLineR/PlayerLineR/ColorHolder"]
margin_top = 4.0
margin_right = 16.0
margin_bottom = 22.0
rect_min_size = Vector2( 16, 18 )
size_flags_vertical = 8
texture = SubResource( 269 )

[node name="Label" type="Label" parent="Header/TopLineR/PlayerLineR/ColorHolder"]
margin_left = 24.0
margin_right = 38.0
margin_bottom = 22.0
size_flags_vertical = 8
text = "0"
valign = 1
__meta__ = {
"_editor_description_": ""
}

[node name="StepsHolder" type="HBoxContainer" parent="Header/TopLineR/PlayerLineR"]
visible = false
margin_left = 248.0
margin_right = 286.0
margin_bottom = 22.0
size_flags_vertical = 8
custom_constants/separation = 8

[node name="TextureRect5" type="TextureRect" parent="Header/TopLineR/PlayerLineR/StepsHolder"]
margin_top = 4.0
margin_right = 16.0
margin_bottom = 22.0
rect_min_size = Vector2( 16, 18 )
size_flags_vertical = 8
texture = SubResource( 268 )

[node name="Label" type="Label" parent="Header/TopLineR/PlayerLineR/StepsHolder"]
margin_left = 24.0
margin_right = 38.0
margin_bottom = 22.0
size_flags_vertical = 8
text = "0"
valign = 1
__meta__ = {
"_editor_description_": ""
}

[node name="SkillHolder" type="HBoxContainer" parent="Header/TopLineR/PlayerLineR"]
visible = false
margin_left = 194.0
margin_right = 232.0
margin_bottom = 22.0
size_flags_vertical = 8
custom_constants/separation = 8

[node name="TextureRect5" type="TextureRect" parent="Header/TopLineR/PlayerLineR/SkillHolder"]
margin_top = 4.0
margin_right = 16.0
margin_bottom = 22.0
rect_min_size = Vector2( 16, 18 )
size_flags_vertical = 8
texture = SubResource( 130 )

[node name="Label" type="Label" parent="Header/TopLineR/PlayerLineR/SkillHolder"]
margin_left = 24.0
margin_right = 38.0
margin_bottom = 22.0
size_flags_vertical = 8
text = "0"
valign = 1
__meta__ = {
"_editor_description_": ""
}

[node name="BurstHolder" type="HBoxContainer" parent="Header/TopLineR/PlayerLineR"]
visible = false
margin_left = 248.0
margin_right = 286.0
margin_bottom = 22.0
size_flags_vertical = 8
custom_constants/separation = 8

[node name="TextureRect6" type="TextureRect" parent="Header/TopLineR/PlayerLineR/BurstHolder"]
margin_top = 4.0
margin_right = 16.0
margin_bottom = 22.0
rect_min_size = Vector2( 16, 18 )
size_flags_vertical = 8
texture = SubResource( 131 )

[node name="Label" type="Label" parent="Header/TopLineR/PlayerLineR/BurstHolder"]
margin_left = 24.0
margin_right = 38.0
margin_bottom = 22.0
size_flags_vertical = 8
text = "0"
valign = 1
__meta__ = {
"_editor_description_": ""
}

[node name="EnergyBar" type="HBoxContainer" parent="Header/TopLineR/PlayerLineR"]
margin_left = 162.0
margin_top = 3.0
margin_right = 226.0
margin_bottom = 22.0
rect_min_size = Vector2( 0, 19 )
size_flags_vertical = 8
custom_constants/separation = 6
script = ExtResource( 13 )

[node name="TextureRect7" type="TextureRect" parent="Header/TopLineR/PlayerLineR/EnergyBar"]
margin_top = 1.0
margin_right = 10.0
margin_bottom = 19.0
rect_min_size = Vector2( 0, 18 )
size_flags_vertical = 8
texture = SubResource( 125 )

[node name="TextureProgress" type="TextureProgress" parent="Header/TopLineR/PlayerLineR/EnergyBar"]
margin_left = 16.0
margin_top = 1.0
margin_right = 64.0
margin_bottom = 19.0
rect_min_size = Vector2( 0, 18 )
size_flags_vertical = 8
max_value = 192.0
step = 8.0
texture_over = SubResource( 126 )
texture_progress = SubResource( 132 )

[node name="LifeIcons" type="HBoxContainer" parent="Header/TopLineR/PlayerLineR"]
margin_left = 242.0
margin_top = 3.0
margin_right = 294.0
margin_bottom = 22.0
rect_min_size = Vector2( 0, 19 )
size_flags_vertical = 8
custom_constants/separation = 2
script = ExtResource( 9 )

[node name="LifeIcon" type="Control" parent="Header/TopLineR/PlayerLineR/LifeIcons"]
margin_top = 1.0
margin_right = 16.0
margin_bottom = 19.0
rect_min_size = Vector2( 16, 18 )
size_flags_vertical = 8

[node name="OffIcon" type="TextureRect" parent="Header/TopLineR/PlayerLineR/LifeIcons/LifeIcon"]
margin_right = 16.0
margin_bottom = 16.0
texture = SubResource( 147 )

[node name="OnIcon" type="TextureRect" parent="Header/TopLineR/PlayerLineR/LifeIcons/LifeIcon"]
margin_right = 16.0
margin_bottom = 16.0
texture = SubResource( 123 )

[node name="LifeIcon2" type="Control" parent="Header/TopLineR/PlayerLineR/LifeIcons"]
margin_left = 18.0
margin_top = 1.0
margin_right = 34.0
margin_bottom = 19.0
rect_min_size = Vector2( 16, 18 )
size_flags_vertical = 8

[node name="OffIcon" type="TextureRect" parent="Header/TopLineR/PlayerLineR/LifeIcons/LifeIcon2"]
margin_right = 16.0
margin_bottom = 16.0
texture = SubResource( 122 )

[node name="OnIcon" type="TextureRect" parent="Header/TopLineR/PlayerLineR/LifeIcons/LifeIcon2"]
margin_right = 16.0
margin_bottom = 16.0
texture = SubResource( 123 )

[node name="LifeIcon3" type="Control" parent="Header/TopLineR/PlayerLineR/LifeIcons"]
margin_left = 36.0
margin_top = 1.0
margin_right = 52.0
margin_bottom = 19.0
rect_min_size = Vector2( 16, 18 )
size_flags_vertical = 8

[node name="OffIcon" type="TextureRect" parent="Header/TopLineR/PlayerLineR/LifeIcons/LifeIcon3"]
margin_right = 16.0
margin_bottom = 16.0
texture = SubResource( 122 )

[node name="OnIcon" type="TextureRect" parent="Header/TopLineR/PlayerLineR/LifeIcons/LifeIcon3"]
margin_right = 16.0
margin_bottom = 16.0
texture = SubResource( 123 )

[node name="PlayerLabel" type="Label" parent="Header/TopLineR/PlayerLineR"]
margin_left = 310.0
margin_right = 338.0
margin_bottom = 22.0
size_flags_vertical = 8
custom_colors/font_color = Color( 1, 1, 1, 0.470588 )
text = "P2"
valign = 1
uppercase = true
__meta__ = {
"_editor_description_": ""
}

[node name="Footer" type="Control" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -40.0
grow_vertical = 0
size_flags_horizontal = 3

[node name="FooterUndi" type="ColorRect" parent="Footer"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0784314, 0.0784314, 0.0784314, 1 )

[node name="FooterLine" type="HBoxContainer" parent="Footer"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 32.0
margin_top = -31.0
margin_right = -30.0
margin_bottom = -9.0
custom_constants/separation = 32
__meta__ = {
"_edit_group_": true
}

[node name="GameLine" type="HBoxContainer" parent="Footer/FooterLine"]
margin_right = 96.0
margin_bottom = 22.0
size_flags_vertical = 8
custom_constants/separation = 8

[node name="Game" type="Label" parent="Footer/FooterLine/GameLine"]
margin_right = 60.0
margin_bottom = 22.0
size_flags_horizontal = 8
text = "GAME"
align = 2
uppercase = true
__meta__ = {
"_editor_description_": ""
}

[node name="Level" type="Label" parent="Footer/FooterLine/GameLine"]
margin_left = 68.0
margin_right = 96.0
margin_bottom = 22.0
size_flags_horizontal = 8
text = "00"
align = 2
__meta__ = {
"_editor_description_": ""
}

[node name="SpectrumHolder" type="Control" parent="Footer/FooterLine"]
margin_left = 128.0
margin_right = 1038.0
margin_bottom = 22.0
grow_horizontal = 2
size_flags_horizontal = 3

[node name="ColorSpectrum" type="HBoxContainer" parent="Footer/FooterLine/SpectrumHolder"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -5.0
margin_bottom = 7.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 0, 12 )
custom_constants/separation = 0
alignment = 1

[node name="SpectrumColorIndicator3" parent="Footer/FooterLine/SpectrumHolder/ColorSpectrum" instance=ExtResource( 6 )]
visible = false
margin_right = 896.0
grow_horizontal = 2
grow_vertical = 2
color = Color( 0.494118, 0.517647, 0.545098, 1 )

[node name="StraysLine" type="HBoxContainer" parent="Footer/FooterLine"]
margin_left = 1070.0
margin_right = 1218.0
margin_bottom = 22.0
size_flags_horizontal = 9
custom_constants/separation = 16
__meta__ = {
"_edit_group_": true
}

[node name="AstrayHolder" type="HBoxContainer" parent="Footer/FooterLine/StraysLine"]
margin_right = 66.0
margin_bottom = 22.0
size_flags_vertical = 8
custom_constants/separation = 8

[node name="TextureRect3" type="TextureRect" parent="Footer/FooterLine/StraysLine/AstrayHolder"]
margin_top = 4.0
margin_right = 16.0
margin_bottom = 22.0
rect_min_size = Vector2( 16, 18 )
size_flags_vertical = 8
texture = SubResource( 128 )

[node name="Label" type="Label" parent="Footer/FooterLine/StraysLine/AstrayHolder"]
margin_left = 24.0
margin_right = 66.0
margin_bottom = 22.0
size_flags_vertical = 8
text = "000"
valign = 2
__meta__ = {
"_editor_description_": ""
}

[node name="PickedHolder" type="HBoxContainer" parent="Footer/FooterLine/StraysLine"]
margin_left = 82.0
margin_right = 148.0
margin_bottom = 22.0
size_flags_vertical = 8
custom_constants/separation = 8

[node name="TextureRect2" type="TextureRect" parent="Footer/FooterLine/StraysLine/PickedHolder"]
margin_top = 4.0
margin_right = 16.0
margin_bottom = 22.0
rect_min_size = Vector2( 16, 18 )
size_flags_vertical = 8
texture = SubResource( 127 )

[node name="Label" type="Label" parent="Footer/FooterLine/StraysLine/PickedHolder"]
margin_left = 24.0
margin_right = 66.0
margin_bottom = 22.0
size_flags_vertical = 8
text = "000"
valign = 2
__meta__ = {
"_editor_description_": ""
}

[node name="LevelLimitHolder" type="HBoxContainer" parent="Footer/FooterLine"]
visible = false
margin_left = 916.0
margin_right = 1218.0
margin_bottom = 22.0
size_flags_vertical = 8
custom_constants/separation = 8

[node name="TextureRect3" type="TextureRect" parent="Footer/FooterLine/LevelLimitHolder"]
visible = false
margin_top = 4.0
margin_right = 16.0
margin_bottom = 22.0
rect_min_size = Vector2( 16, 18 )
size_flags_vertical = 8
texture = SubResource( 450 )

[node name="Label" type="Label" parent="Footer/FooterLine/LevelLimitHolder"]
margin_right = 42.0
margin_bottom = 22.0
size_flags_vertical = 8
text = "000"
valign = 2
__meta__ = {
"_editor_description_": ""
}

[node name="Label2" type="Label" parent="Footer/FooterLine/LevelLimitHolder"]
margin_left = 50.0
margin_right = 302.0
margin_bottom = 22.0
size_flags_vertical = 8
text = "%POINTS TO LEVEL UP"
valign = 2
__meta__ = {
"_editor_description_": ""
}

[connection signal="gametime_is_up" from="Header/GameTimerHunds" to="." method="_on_GameTimer_gametime_is_up"]
